--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <title>JRtecnologias - Soluciones Informaticas</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="assets/jr/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="assets/jr/css/grayscale.css" rel="stylesheet">
+    <link href="assets/css/grayscale.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="assets/jr/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
@@ -86,7 +86,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading"><img src="assets/jr/img/logo.png" alt="JRtecnologias" > </h1>
+                        <h1 class="brand-heading"><img src="assets/img/logo.png" alt="JRtecnologias" > </h1>
                         <p class="intro-text">Mas que Software<br> Desarrollamos Soluciones</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -159,18 +159,18 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="assets/jr/js/jquery.js"></script>
+    <script src="assets/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="assets/jr/js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="assets/jr/js/jquery.easing.min.js"></script>
+    <script src="assets/js/jquery.easing.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBt1LDV1k7G87MXNYEdupii8M0-bixOsMs"></script>
     <!-- Custom Theme JavaScript -->
-    <script src="assets/jr/js/grayscale.js"></script>
+    <script src="assets/js/grayscale.js"></script>
  
 
  </body>
