--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2Productos</h2>
-                     <a href="https://www.outluok.com" class="btn btn-default btn-lg">Email Marketing</a>
-                    <a href="http://www.unsitio.net" class="btn btn-default btn-lg"> Dominios y Hosting</a>
-                    <a href="https://play.google.com/store/apps/developer?id=JRtecnologias" class="btn btn-default btn-lg">Desarrollo de Apps</a> <br>                 
-                     <a href="http://www.elpuntoweb.com" class="btn btn-default btn-lg">Software de Inventario y Punto de Venta</a>
+                     <a href="#contact" class="btn btn-default btn-lg">Email Marketing</a>
+                    <a href="#contact" class="btn btn-default btn-lg"> Dominios y Hosting</a>
+                    <a href="#contact" class="btn btn-default btn-lg">Desarrollo de Apps</a> <br>                 
+                     <a href="#contact" class="btn btn-default btn-lg">Software de Inventario y Punto de Venta</a>
                    
                 </div>
             </div>
